--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,20 @@
     <title></title>
   </head>
   <body>
-    <h1>My contact Details</h1>
+    <h3>Please Enter your details</h3>
+    <hr style="3" >
+    <form class="" action="mailto:naveen.satish24@gmail.com" method="post">
+      <label>Name:</label>
+      <input type="text" name="YourName:"><br>
+      <label>Occupation</label>
+      <input type="text" name="occupation:"><br>
+      <label>Email Id:</label>
+      <input type="email" name="emailId:"><br>
+      <label>Date of Birth:</label>
+      <input type="date" name="DOB:"><br>
+      <input type="submit" value="Subscribe!">
+    </form>
+    <h3>My contact Details</h3>
     <p>My fictional Addess</p>
     <p>email: myemail@gmail.com</p>
     <p>Telephone: 8951624691</p>
